myanalyzer.output
Terminals unused in grammar

    KW_TRUE
    KW_FALSE
    KW_IF
    KW_ELSE
    KW_ENDIF
    KW_FOR
    KW_IN
    KW_ENDFOR
    KW_WHILE
    KW_ENDWHILE
    KW_BREAK
    KW_CONTINUE
    KW_NOT
    KW_AND
    KW_OR
    KW_RETURN
    KW_OF
    SELF_ADD
    SELF_SUB
    SELF_MULT
    SELF_DIV
    SELF_MOD
    SELF_CLN_ASSIGN
    RP_EQUAL
    RP_NOT_EQUAL
    RP_LESS
    RP_LESS_EQUAL
    RP_GREATER
    RP_GREARER_EQUAL
    '+'
    '-'
    '*'
    '/'
    '%'
    FN_POW
    '.'


Grammar

    0 $accept: program $end

    1 program: c_file

    2 c_file: main_function
    3       | declaration_body main_function

    4 main_function: KW_DEF KW_BEGIN '(' ')' ':' function_body KW_ENDDEF ';'

    5 declaration_body: general_declarations
    6                 | declaration_body general_declarations

    7 general_declarations: var_declarations
    8                     | const_declarations
    9                     | comp_declarations
   10                     | function

   11 general_var_types: basic_var_types
   12                  | TK_ID

   13 basic_var_types: KW_SCALAR
   14                | KW_INTEGER
   15                | KW_STR
   16                | KW_BOOL

   17 var_declarations: var_identifiers ':' general_var_types ';'
   18                 | array_declaration ':' general_var_types ';'

   19 var_identifiers: TK_ID
   20                | var_identifiers ',' TK_ID

   21 array_declaration: TK_ID '[' TK_INT ']'
   22                  | array_declaration ',' TK_ID '[' TK_INT ']'

   23 const_declarations: KW_CONST var_identifiers ASSIGN assinged_values ':' general_var_types ';'

   24 assinged_values: TK_INT
   25                | TK_DOUBLE
   26                | TK_STRING

   27 comp_declarations: KW_COMP TK_ID ':' comp_body_check KW_ENDCOMP ';'

   28 comp_body_check: ε
   29                | comp_body

   30 comp_body: comp_var_declarations
   31          | comp_var_declarations comp_body

   32 comp_var_declarations: comp_var_identifiers ':' general_var_types ';'
   33                      | comp_array_var_declaration ':' general_var_types ';'

   34 comp_var_identifiers: '#' TK_ID
   35                     | '#' TK_ID ',' comp_var_identifiers

   36 comp_array_var_declaration: '#' TK_ID '[' TK_INT ']'
   37                           | comp_array_var_declaration ',' '#' TK_ID '[' TK_INT ']'

   38 function: KW_DEF TK_ID '(' parameters ')' ':' function_body KW_ENDDEF ';'
   39         | KW_DEF TK_ID '(' parameters ')' FN_RETURN general_var_types ':' function_body KW_ENDDEF ';'

   40 parameters: ε
   41           | TK_ID ':' general_var_types
   42           | TK_ID ':' general_var_types ',' parameters
   43           | TK_ID '[' ']' ':' general_var_types
   44           | TK_ID '[' ']' ':' general_var_types ',' parameters

   45 function_body: ε


Terminals, with rules where they appear

    $end (0) 0
    '#' (35) 34 35 36 37
    '%' (37)
    '(' (40) 4 38 39
    ')' (41) 4 38 39
    '*' (42)
    '+' (43)
    ',' (44) 20 22 35 37 42 44
    '-' (45)
    '.' (46)
    '/' (47)
    ':' (58) 4 17 18 23 27 32 33 38 39 41 42 43 44
    ';' (59) 4 17 18 23 27 32 33 38 39
    '[' (91) 21 22 36 37 43 44
    ']' (93) 21 22 36 37 43 44
    error (256)
    KW_INTEGER (258) 14
    KW_SCALAR (259) 13
    KW_STR (260) 15
    KW_BOOL (261) 16
    KW_TRUE (262)
    KW_FALSE (263)
    KW_CONST (264) 23
    KW_IF (265)
    KW_ELSE (266)
    KW_ENDIF (267)
    KW_FOR (268)
    KW_IN (269)
    KW_ENDFOR (270)
    KW_WHILE (271)
    KW_ENDWHILE (272)
    KW_BREAK (273)
    KW_CONTINUE (274)
    KW_NOT (275)
    KW_AND (276)
    KW_OR (277)
    KW_DEF (278) 4 38 39
    KW_ENDDEF (279) 4 38 39
    KW_BEGIN (280) 4
    KW_RETURN (281)
    KW_COMP (282) 27
    KW_ENDCOMP (283) 27
    KW_OF (284)
    TK_ID <string> (285) 12 19 20 21 22 27 34 35 36 37 38 39 41 42 43 44
    TK_INT <string> (286) 21 22 24 36 37
    TK_DOUBLE <string> (287) 25
    TK_STRING <string> (288) 26
    ASSIGN (289) 23
    SELF_ADD (290)
    SELF_SUB (291)
    SELF_MULT (292)
    SELF_DIV (293)
    SELF_MOD (294)
    SELF_CLN_ASSIGN (295)
    RP_EQUAL (296)
    RP_NOT_EQUAL (297)
    RP_LESS (298)
    RP_LESS_EQUAL (299)
    RP_GREATER (300)
    RP_GREARER_EQUAL (301)
    FN_POW (302)
    FN_RETURN (303) 39


Nonterminals, with rules where they appear

    $accept (63)
        on left: 0
    program <string> (64)
        on left: 1
        on right: 0
    c_file <string> (65)
        on left: 2 3
        on right: 1
    main_function <string> (66)
        on left: 4
        on right: 2 3
    declaration_body <string> (67)
        on left: 5 6
        on right: 3 6
    general_declarations <string> (68)
        on left: 7 8 9 10
        on right: 5 6
    general_var_types <string> (69)
        on left: 11 12
        on right: 17 18 23 32 33 39 41 42 43 44
    basic_var_types <string> (70)
        on left: 13 14 15 16
        on right: 11
    var_declarations <string> (71)
        on left: 17 18
        on right: 7
    var_identifiers <string> (72)
        on left: 19 20
        on right: 17 20 23
    array_declaration <string> (73)
        on left: 21 22
        on right: 18 22
    const_declarations <string> (74)
        on left: 23
        on right: 8
    assinged_values <string> (75)
        on left: 24 25 26
        on right: 23
    comp_declarations <string> (76)
        on left: 27
        on right: 9
    comp_body_check <string> (77)
        on left: 28 29
        on right: 27
    comp_body <string> (78)
        on left: 30 31
        on right: 29 31
    comp_var_declarations <string> (79)
        on left: 32 33
        on right: 30 31
    comp_var_identifiers <string> (80)
        on left: 34 35
        on right: 32 35
    comp_array_var_declaration <string> (81)
        on left: 36 37
        on right: 33 37
    function <string> (82)
        on left: 38 39
        on right: 10
    parameters <string> (83)
        on left: 40 41 42 43 44
        on right: 38 39 42 44
    function_body <string> (84)
        on left: 45
        on right: 4 38 39


State 0

    0 $accept: • program $end
    1 program: • c_file
    2 c_file: • main_function
    3       | • declaration_body main_function
    4 main_function: • KW_DEF KW_BEGIN '(' ')' ':' function_body KW_ENDDEF ';'
    5 declaration_body: • general_declarations
    6                 | • declaration_body general_declarations
    7 general_declarations: • var_declarations
    8                     | • const_declarations
    9                     | • comp_declarations
   10                     | • function
   17 var_declarations: • var_identifiers ':' general_var_types ';'
   18                 | • array_declaration ':' general_var_types ';'
   19 var_identifiers: • TK_ID
   20                | • var_identifiers ',' TK_ID
   21 array_declaration: • TK_ID '[' TK_INT ']'
   22                  | • array_declaration ',' TK_ID '[' TK_INT ']'
   23 const_declarations: • KW_CONST var_identifiers ASSIGN assinged_values ':' general_var_types ';'
   27 comp_declarations: • KW_COMP TK_ID ':' comp_body_check KW_ENDCOMP ';'
   38 function: • KW_DEF TK_ID '(' parameters ')' ':' function_body KW_ENDDEF ';'
   39         | • KW_DEF TK_ID '(' parameters ')' FN_RETURN general_var_types ':' function_body KW_ENDDEF ';'

    KW_CONST  shift, and go to state 1
    KW_DEF    shift, and go to state 2
    KW_COMP   shift, and go to state 3
    TK_ID     shift, and go to state 4

    program               go to state 5
    c_file                go to state 6
    main_function         go to state 7
    declaration_body      go to state 8
    general_declarations  go to state 9
    var_declarations      go to state 10
    var_identifiers       go to state 11
    array_declaration     go to state 12
    const_declarations    go to state 13
    comp_declarations     go to state 14
    function              go to state 15


State 1

   19 var_identifiers: • TK_ID
   20                | • var_identifiers ',' TK_ID
   23 const_declarations: KW_CONST • var_identifiers ASSIGN assinged_values ':' general_var_types ';'

    TK_ID  shift, and go to state 16

    var_identifiers  go to state 17


State 2

    4 main_function: KW_DEF • KW_BEGIN '(' ')' ':' function_body KW_ENDDEF ';'
   38 function: KW_DEF • TK_ID '(' parameters ')' ':' function_body KW_ENDDEF ';'
   39         | KW_DEF • TK_ID '(' parameters ')' FN_RETURN general_var_types ':' function_body KW_ENDDEF ';'

    KW_BEGIN  shift, and go to state 18
    TK_ID     shift, and go to state 19


State 3

   27 comp_declarations: KW_COMP • TK_ID ':' comp_body_check KW_ENDCOMP ';'

    TK_ID  shift, and go to state 20


State 4

   19 var_identifiers: TK_ID •  [':', ',']
   21 array_declaration: TK_ID • '[' TK_INT ']'

    '['  shift, and go to state 21

    $default  reduce using rule 19 (var_identifiers)


State 5

    0 $accept: program • $end

    $end  shift, and go to state 22


State 6

    1 program: c_file •

    $default  reduce using rule 1 (program)


State 7

    2 c_file: main_function •

    $default  reduce using rule 2 (c_file)


State 8

    3 c_file: declaration_body • main_function
    4 main_function: • KW_DEF KW_BEGIN '(' ')' ':' function_body KW_ENDDEF ';'
    6 declaration_body: declaration_body • general_declarations
    7 general_declarations: • var_declarations
    8                     | • const_declarations
    9                     | • comp_declarations
   10                     | • function
   17 var_declarations: • var_identifiers ':' general_var_types ';'
   18                 | • array_declaration ':' general_var_types ';'
   19 var_identifiers: • TK_ID
   20                | • var_identifiers ',' TK_ID
   21 array_declaration: • TK_ID '[' TK_INT ']'
   22                  | • array_declaration ',' TK_ID '[' TK_INT ']'
   23 const_declarations: • KW_CONST var_identifiers ASSIGN assinged_values ':' general_var_types ';'
   27 comp_declarations: • KW_COMP TK_ID ':' comp_body_check KW_ENDCOMP ';'
   38 function: • KW_DEF TK_ID '(' parameters ')' ':' function_body KW_ENDDEF ';'
   39         | • KW_DEF TK_ID '(' parameters ')' FN_RETURN general_var_types ':' function_body KW_ENDDEF ';'

    KW_CONST  shift, and go to state 1
    KW_DEF    shift, and go to state 2
    KW_COMP   shift, and go to state 3
    TK_ID     shift, and go to state 4

    main_function         go to state 23
    general_declarations  go to state 24
    var_declarations      go to state 10
    var_identifiers       go to state 11
    array_declaration     go to state 12
    const_declarations    go to state 13
    comp_declarations     go to state 14
    function              go to state 15


State 9

    5 declaration_body: general_declarations •

    $default  reduce using rule 5 (declaration_body)


State 10

    7 general_declarations: var_declarations •

    $default  reduce using rule 7 (general_declarations)


State 11

   17 var_declarations: var_identifiers • ':' general_var_types ';'
   20 var_identifiers: var_identifiers • ',' TK_ID

    ':'  shift, and go to state 25
    ','  shift, and go to state 26


State 12

   18 var_declarations: array_declaration • ':' general_var_types ';'
   22 array_declaration: array_declaration • ',' TK_ID '[' TK_INT ']'

    ':'  shift, and go to state 27
    ','  shift, and go to state 28


State 13

    8 general_declarations: const_declarations •

    $default  reduce using rule 8 (general_declarations)


State 14

    9 general_declarations: comp_declarations •

    $default  reduce using rule 9 (general_declarations)


State 15

   10 general_declarations: function •

    $default  reduce using rule 10 (general_declarations)


State 16

   19 var_identifiers: TK_ID •

    $default  reduce using rule 19 (var_identifiers)


State 17

   20 var_identifiers: var_identifiers • ',' TK_ID
   23 const_declarations: KW_CONST var_identifiers • ASSIGN assinged_values ':' general_var_types ';'

    ASSIGN  shift, and go to state 29
    ','     shift, and go to state 26


State 18

    4 main_function: KW_DEF KW_BEGIN • '(' ')' ':' function_body KW_ENDDEF ';'

    '('  shift, and go to state 30


State 19

   38 function: KW_DEF TK_ID • '(' parameters ')' ':' function_body KW_ENDDEF ';'
   39         | KW_DEF TK_ID • '(' parameters ')' FN_RETURN general_var_types ':' function_body KW_ENDDEF ';'

    '('  shift, and go to state 31


State 20

   27 comp_declarations: KW_COMP TK_ID • ':' comp_body_check KW_ENDCOMP ';'

    ':'  shift, and go to state 32


State 21

   21 array_declaration: TK_ID '[' • TK_INT ']'

    TK_INT  shift, and go to state 33


State 22

    0 $accept: program $end •

    $default  accept


State 23

    3 c_file: declaration_body main_function •

    $default  reduce using rule 3 (c_file)


State 24

    6 declaration_body: declaration_body general_declarations •

    $default  reduce using rule 6 (declaration_body)


State 25

   11 general_var_types: • basic_var_types
   12                  | • TK_ID
   13 basic_var_types: • KW_SCALAR
   14                | • KW_INTEGER
   15                | • KW_STR
   16                | • KW_BOOL
   17 var_declarations: var_identifiers ':' • general_var_types ';'

    KW_INTEGER  shift, and go to state 34
    KW_SCALAR   shift, and go to state 35
    KW_STR      shift, and go to state 36
    KW_BOOL     shift, and go to state 37
    TK_ID       shift, and go to state 38

    general_var_types  go to state 39
    basic_var_types    go to state 40


State 26

   20 var_identifiers: var_identifiers ',' • TK_ID

    TK_ID  shift, and go to state 41


State 27

   11 general_var_types: • basic_var_types
   12                  | • TK_ID
   13 basic_var_types: • KW_SCALAR
   14                | • KW_INTEGER
   15                | • KW_STR
   16                | • KW_BOOL
   18 var_declarations: array_declaration ':' • general_var_types ';'

    KW_INTEGER  shift, and go to state 34
    KW_SCALAR   shift, and go to state 35
    KW_STR      shift, and go to state 36
    KW_BOOL     shift, and go to state 37
    TK_ID       shift, and go to state 38

    general_var_types  go to state 42
    basic_var_types    go to state 40


State 28

   22 array_declaration: array_declaration ',' • TK_ID '[' TK_INT ']'

    TK_ID  shift, and go to state 43


State 29

   23 const_declarations: KW_CONST var_identifiers ASSIGN • assinged_values ':' general_var_types ';'
   24 assinged_values: • TK_INT
   25                | • TK_DOUBLE
   26                | • TK_STRING

    TK_INT     shift, and go to state 44
    TK_DOUBLE  shift, and go to state 45
    TK_STRING  shift, and go to state 46

    assinged_values  go to state 47


State 30

    4 main_function: KW_DEF KW_BEGIN '(' • ')' ':' function_body KW_ENDDEF ';'

    ')'  shift, and go to state 48


State 31

   38 function: KW_DEF TK_ID '(' • parameters ')' ':' function_body KW_ENDDEF ';'
   39         | KW_DEF TK_ID '(' • parameters ')' FN_RETURN general_var_types ':' function_body KW_ENDDEF ';'
   40 parameters: ε •  [')']
   41           | • TK_ID ':' general_var_types
   42           | • TK_ID ':' general_var_types ',' parameters
   43           | • TK_ID '[' ']' ':' general_var_types
   44           | • TK_ID '[' ']' ':' general_var_types ',' parameters

    TK_ID  shift, and go to state 49

    $default  reduce using rule 40 (parameters)

    parameters  go to state 50


State 32

   27 comp_declarations: KW_COMP TK_ID ':' • comp_body_check KW_ENDCOMP ';'
   28 comp_body_check: ε •  [KW_ENDCOMP]
   29                | • comp_body
   30 comp_body: • comp_var_declarations
   31          | • comp_var_declarations comp_body
   32 comp_var_declarations: • comp_var_identifiers ':' general_var_types ';'
   33                      | • comp_array_var_declaration ':' general_var_types ';'
   34 comp_var_identifiers: • '#' TK_ID
   35                     | • '#' TK_ID ',' comp_var_identifiers
   36 comp_array_var_declaration: • '#' TK_ID '[' TK_INT ']'
   37                           | • comp_array_var_declaration ',' '#' TK_ID '[' TK_INT ']'

    '#'  shift, and go to state 51

    $default  reduce using rule 28 (comp_body_check)

    comp_body_check             go to state 52
    comp_body                   go to state 53
    comp_var_declarations       go to state 54
    comp_var_identifiers        go to state 55
    comp_array_var_declaration  go to state 56


State 33

   21 array_declaration: TK_ID '[' TK_INT • ']'

    ']'  shift, and go to state 57


State 34

   14 basic_var_types: KW_INTEGER •

    $default  reduce using rule 14 (basic_var_types)


State 35

   13 basic_var_types: KW_SCALAR •

    $default  reduce using rule 13 (basic_var_types)


State 36

   15 basic_var_types: KW_STR •

    $default  reduce using rule 15 (basic_var_types)


State 37

   16 basic_var_types: KW_BOOL •

    $default  reduce using rule 16 (basic_var_types)


State 38

   12 general_var_types: TK_ID •

    $default  reduce using rule 12 (general_var_types)


State 39

   17 var_declarations: var_identifiers ':' general_var_types • ';'

    ';'  shift, and go to state 58


State 40

   11 general_var_types: basic_var_types •

    $default  reduce using rule 11 (general_var_types)


State 41

   20 var_identifiers: var_identifiers ',' TK_ID •

    $default  reduce using rule 20 (var_identifiers)


State 42

   18 var_declarations: array_declaration ':' general_var_types • ';'

    ';'  shift, and go to state 59


State 43

   22 array_declaration: array_declaration ',' TK_ID • '[' TK_INT ']'

    '['  shift, and go to state 60


State 44

   24 assinged_values: TK_INT •

    $default  reduce using rule 24 (assinged_values)


State 45

   25 assinged_values: TK_DOUBLE •

    $default  reduce using rule 25 (assinged_values)


State 46

   26 assinged_values: TK_STRING •

    $default  reduce using rule 26 (assinged_values)


State 47

   23 const_declarations: KW_CONST var_identifiers ASSIGN assinged_values • ':' general_var_types ';'

    ':'  shift, and go to state 61


State 48

    4 main_function: KW_DEF KW_BEGIN '(' ')' • ':' function_body KW_ENDDEF ';'

    ':'  shift, and go to state 62


State 49

   41 parameters: TK_ID • ':' general_var_types
   42           | TK_ID • ':' general_var_types ',' parameters
   43           | TK_ID • '[' ']' ':' general_var_types
   44           | TK_ID • '[' ']' ':' general_var_types ',' parameters

    '['  shift, and go to state 63
    ':'  shift, and go to state 64


State 50

   38 function: KW_DEF TK_ID '(' parameters • ')' ':' function_body KW_ENDDEF ';'
   39         | KW_DEF TK_ID '(' parameters • ')' FN_RETURN general_var_types ':' function_body KW_ENDDEF ';'

    ')'  shift, and go to state 65


State 51

   34 comp_var_identifiers: '#' • TK_ID
   35                     | '#' • TK_ID ',' comp_var_identifiers
   36 comp_array_var_declaration: '#' • TK_ID '[' TK_INT ']'

    TK_ID  shift, and go to state 66


State 52

   27 comp_declarations: KW_COMP TK_ID ':' comp_body_check • KW_ENDCOMP ';'

    KW_ENDCOMP  shift, and go to state 67


State 53

   29 comp_body_check: comp_body •

    $default  reduce using rule 29 (comp_body_check)


State 54

   30 comp_body: • comp_var_declarations
   30          | comp_var_declarations •  [KW_ENDCOMP]
   31          | • comp_var_declarations comp_body
   31          | comp_var_declarations • comp_body
   32 comp_var_declarations: • comp_var_identifiers ':' general_var_types ';'
   33                      | • comp_array_var_declaration ':' general_var_types ';'
   34 comp_var_identifiers: • '#' TK_ID
   35                     | • '#' TK_ID ',' comp_var_identifiers
   36 comp_array_var_declaration: • '#' TK_ID '[' TK_INT ']'
   37                           | • comp_array_var_declaration ',' '#' TK_ID '[' TK_INT ']'

    '#'  shift, and go to state 51

    $default  reduce using rule 30 (comp_body)

    comp_body                   go to state 68
    comp_var_declarations       go to state 54
    comp_var_identifiers        go to state 55
    comp_array_var_declaration  go to state 56


State 55

   32 comp_var_declarations: comp_var_identifiers • ':' general_var_types ';'

    ':'  shift, and go to state 69


State 56

   33 comp_var_declarations: comp_array_var_declaration • ':' general_var_types ';'
   37 comp_array_var_declaration: comp_array_var_declaration • ',' '#' TK_ID '[' TK_INT ']'

    ':'  shift, and go to state 70
    ','  shift, and go to state 71


State 57

   21 array_declaration: TK_ID '[' TK_INT ']' •

    $default  reduce using rule 21 (array_declaration)


State 58

   17 var_declarations: var_identifiers ':' general_var_types ';' •

    $default  reduce using rule 17 (var_declarations)


State 59

   18 var_declarations: array_declaration ':' general_var_types ';' •

    $default  reduce using rule 18 (var_declarations)


State 60

   22 array_declaration: array_declaration ',' TK_ID '[' • TK_INT ']'

    TK_INT  shift, and go to state 72


State 61

   11 general_var_types: • basic_var_types
   12                  | • TK_ID
   13 basic_var_types: • KW_SCALAR
   14                | • KW_INTEGER
   15                | • KW_STR
   16                | • KW_BOOL
   23 const_declarations: KW_CONST var_identifiers ASSIGN assinged_values ':' • general_var_types ';'

    KW_INTEGER  shift, and go to state 34
    KW_SCALAR   shift, and go to state 35
    KW_STR      shift, and go to state 36
    KW_BOOL     shift, and go to state 37
    TK_ID       shift, and go to state 38

    general_var_types  go to state 73
    basic_var_types    go to state 40


State 62

    4 main_function: KW_DEF KW_BEGIN '(' ')' ':' • function_body KW_ENDDEF ';'
   45 function_body: ε •

    $default  reduce using rule 45 (function_body)

    function_body  go to state 74


State 63

   43 parameters: TK_ID '[' • ']' ':' general_var_types
   44           | TK_ID '[' • ']' ':' general_var_types ',' parameters

    ']'  shift, and go to state 75


State 64

   11 general_var_types: • basic_var_types
   12                  | • TK_ID
   13 basic_var_types: • KW_SCALAR
   14                | • KW_INTEGER
   15                | • KW_STR
   16                | • KW_BOOL
   41 parameters: TK_ID ':' • general_var_types
   42           | TK_ID ':' • general_var_types ',' parameters

    KW_INTEGER  shift, and go to state 34
    KW_SCALAR   shift, and go to state 35
    KW_STR      shift, and go to state 36
    KW_BOOL     shift, and go to state 37
    TK_ID       shift, and go to state 38

    general_var_types  go to state 76
    basic_var_types    go to state 40


State 65

   38 function: KW_DEF TK_ID '(' parameters ')' • ':' function_body KW_ENDDEF ';'
   39         | KW_DEF TK_ID '(' parameters ')' • FN_RETURN general_var_types ':' function_body KW_ENDDEF ';'

    FN_RETURN  shift, and go to state 77
    ':'        shift, and go to state 78


State 66

   34 comp_var_identifiers: '#' TK_ID •  [':']
   35                     | '#' TK_ID • ',' comp_var_identifiers
   36 comp_array_var_declaration: '#' TK_ID • '[' TK_INT ']'

    '['  shift, and go to state 79
    ','  shift, and go to state 80

    $default  reduce using rule 34 (comp_var_identifiers)


State 67

   27 comp_declarations: KW_COMP TK_ID ':' comp_body_check KW_ENDCOMP • ';'

    ';'  shift, and go to state 81


State 68

   31 comp_body: comp_var_declarations comp_body •

    $default  reduce using rule 31 (comp_body)


State 69

   11 general_var_types: • basic_var_types
   12                  | • TK_ID
   13 basic_var_types: • KW_SCALAR
   14                | • KW_INTEGER
   15                | • KW_STR
   16                | • KW_BOOL
   32 comp_var_declarations: comp_var_identifiers ':' • general_var_types ';'

    KW_INTEGER  shift, and go to state 34
    KW_SCALAR   shift, and go to state 35
    KW_STR      shift, and go to state 36
    KW_BOOL     shift, and go to state 37
    TK_ID       shift, and go to state 38

    general_var_types  go to state 82
    basic_var_types    go to state 40


State 70

   11 general_var_types: • basic_var_types
   12                  | • TK_ID
   13 basic_var_types: • KW_SCALAR
   14                | • KW_INTEGER
   15                | • KW_STR
   16                | • KW_BOOL
   33 comp_var_declarations: comp_array_var_declaration ':' • general_var_types ';'

    KW_INTEGER  shift, and go to state 34
    KW_SCALAR   shift, and go to state 35
    KW_STR      shift, and go to state 36
    KW_BOOL     shift, and go to state 37
    TK_ID       shift, and go to state 38

    general_var_types  go to state 83
    basic_var_types    go to state 40


State 71

   37 comp_array_var_declaration: comp_array_var_declaration ',' • '#' TK_ID '[' TK_INT ']'

    '#'  shift, and go to state 84


State 72

   22 array_declaration: array_declaration ',' TK_ID '[' TK_INT • ']'

    ']'  shift, and go to state 85


State 73

   23 const_declarations: KW_CONST var_identifiers ASSIGN assinged_values ':' general_var_types • ';'

    ';'  shift, and go to state 86


State 74

    4 main_function: KW_DEF KW_BEGIN '(' ')' ':' function_body • KW_ENDDEF ';'

    KW_ENDDEF  shift, and go to state 87


State 75

   43 parameters: TK_ID '[' ']' • ':' general_var_types
   44           | TK_ID '[' ']' • ':' general_var_types ',' parameters

    ':'  shift, and go to state 88


State 76

   41 parameters: TK_ID ':' general_var_types •  [')']
   42           | TK_ID ':' general_var_types • ',' parameters

    ','  shift, and go to state 89

    $default  reduce using rule 41 (parameters)


State 77

   11 general_var_types: • basic_var_types
   12                  | • TK_ID
   13 basic_var_types: • KW_SCALAR
   14                | • KW_INTEGER
   15                | • KW_STR
   16                | • KW_BOOL
   39 function: KW_DEF TK_ID '(' parameters ')' FN_RETURN • general_var_types ':' function_body KW_ENDDEF ';'

    KW_INTEGER  shift, and go to state 34
    KW_SCALAR   shift, and go to state 35
    KW_STR      shift, and go to state 36
    KW_BOOL     shift, and go to state 37
    TK_ID       shift, and go to state 38

    general_var_types  go to state 90
    basic_var_types    go to state 40


State 78

   38 function: KW_DEF TK_ID '(' parameters ')' ':' • function_body KW_ENDDEF ';'
   45 function_body: ε •

    $default  reduce using rule 45 (function_body)

    function_body  go to state 91


State 79

   36 comp_array_var_declaration: '#' TK_ID '[' • TK_INT ']'

    TK_INT  shift, and go to state 92


State 80

   34 comp_var_identifiers: • '#' TK_ID
   35                     | • '#' TK_ID ',' comp_var_identifiers
   35                     | '#' TK_ID ',' • comp_var_identifiers

    '#'  shift, and go to state 93

    comp_var_identifiers  go to state 94


State 81

   27 comp_declarations: KW_COMP TK_ID ':' comp_body_check KW_ENDCOMP ';' •

    $default  reduce using rule 27 (comp_declarations)


State 82

   32 comp_var_declarations: comp_var_identifiers ':' general_var_types • ';'

    ';'  shift, and go to state 95


State 83

   33 comp_var_declarations: comp_array_var_declaration ':' general_var_types • ';'

    ';'  shift, and go to state 96


State 84

   37 comp_array_var_declaration: comp_array_var_declaration ',' '#' • TK_ID '[' TK_INT ']'

    TK_ID  shift, and go to state 97


State 85

   22 array_declaration: array_declaration ',' TK_ID '[' TK_INT ']' •

    $default  reduce using rule 22 (array_declaration)


State 86

   23 const_declarations: KW_CONST var_identifiers ASSIGN assinged_values ':' general_var_types ';' •

    $default  reduce using rule 23 (const_declarations)


State 87

    4 main_function: KW_DEF KW_BEGIN '(' ')' ':' function_body KW_ENDDEF • ';'

    ';'  shift, and go to state 98


State 88

   11 general_var_types: • basic_var_types
   12                  | • TK_ID
   13 basic_var_types: • KW_SCALAR
   14                | • KW_INTEGER
   15                | • KW_STR
   16                | • KW_BOOL
   43 parameters: TK_ID '[' ']' ':' • general_var_types
   44           | TK_ID '[' ']' ':' • general_var_types ',' parameters

    KW_INTEGER  shift, and go to state 34
    KW_SCALAR   shift, and go to state 35
    KW_STR      shift, and go to state 36
    KW_BOOL     shift, and go to state 37
    TK_ID       shift, and go to state 38

    general_var_types  go to state 99
    basic_var_types    go to state 40


State 89

   40 parameters: ε •  [')']
   41           | • TK_ID ':' general_var_types
   42           | • TK_ID ':' general_var_types ',' parameters
   42           | TK_ID ':' general_var_types ',' • parameters
   43           | • TK_ID '[' ']' ':' general_var_types
   44           | • TK_ID '[' ']' ':' general_var_types ',' parameters

    TK_ID  shift, and go to state 49

    $default  reduce using rule 40 (parameters)

    parameters  go to state 100


State 90

   39 function: KW_DEF TK_ID '(' parameters ')' FN_RETURN general_var_types • ':' function_body KW_ENDDEF ';'

    ':'  shift, and go to state 101


State 91

   38 function: KW_DEF TK_ID '(' parameters ')' ':' function_body • KW_ENDDEF ';'

    KW_ENDDEF  shift, and go to state 102


State 92

   36 comp_array_var_declaration: '#' TK_ID '[' TK_INT • ']'

    ']'  shift, and go to state 103


State 93

   34 comp_var_identifiers: '#' • TK_ID
   35                     | '#' • TK_ID ',' comp_var_identifiers

    TK_ID  shift, and go to state 104


State 94

   35 comp_var_identifiers: '#' TK_ID ',' comp_var_identifiers •

    $default  reduce using rule 35 (comp_var_identifiers)


State 95

   32 comp_var_declarations: comp_var_identifiers ':' general_var_types ';' •

    $default  reduce using rule 32 (comp_var_declarations)


State 96

   33 comp_var_declarations: comp_array_var_declaration ':' general_var_types ';' •

    $default  reduce using rule 33 (comp_var_declarations)


State 97

   37 comp_array_var_declaration: comp_array_var_declaration ',' '#' TK_ID • '[' TK_INT ']'

    '['  shift, and go to state 105


State 98

    4 main_function: KW_DEF KW_BEGIN '(' ')' ':' function_body KW_ENDDEF ';' •

    $default  reduce using rule 4 (main_function)


State 99

   43 parameters: TK_ID '[' ']' ':' general_var_types •  [')']
   44           | TK_ID '[' ']' ':' general_var_types • ',' parameters

    ','  shift, and go to state 106

    $default  reduce using rule 43 (parameters)


State 100

   42 parameters: TK_ID ':' general_var_types ',' parameters •

    $default  reduce using rule 42 (parameters)


State 101

   39 function: KW_DEF TK_ID '(' parameters ')' FN_RETURN general_var_types ':' • function_body KW_ENDDEF ';'
   45 function_body: ε •

    $default  reduce using rule 45 (function_body)

    function_body  go to state 107


State 102

   38 function: KW_DEF TK_ID '(' parameters ')' ':' function_body KW_ENDDEF • ';'

    ';'  shift, and go to state 108


State 103

   36 comp_array_var_declaration: '#' TK_ID '[' TK_INT ']' •

    $default  reduce using rule 36 (comp_array_var_declaration)


State 104

   34 comp_var_identifiers: '#' TK_ID •  [':']
   35                     | '#' TK_ID • ',' comp_var_identifiers

    ','  shift, and go to state 80

    $default  reduce using rule 34 (comp_var_identifiers)


State 105

   37 comp_array_var_declaration: comp_array_var_declaration ',' '#' TK_ID '[' • TK_INT ']'

    TK_INT  shift, and go to state 109


State 106

   40 parameters: ε •  [')']
   41           | • TK_ID ':' general_var_types
   42           | • TK_ID ':' general_var_types ',' parameters
   43           | • TK_ID '[' ']' ':' general_var_types
   44           | • TK_ID '[' ']' ':' general_var_types ',' parameters
   44           | TK_ID '[' ']' ':' general_var_types ',' • parameters

    TK_ID  shift, and go to state 49

    $default  reduce using rule 40 (parameters)

    parameters  go to state 110


State 107

   39 function: KW_DEF TK_ID '(' parameters ')' FN_RETURN general_var_types ':' function_body • KW_ENDDEF ';'

    KW_ENDDEF  shift, and go to state 111


State 108

   38 function: KW_DEF TK_ID '(' parameters ')' ':' function_body KW_ENDDEF ';' •

    $default  reduce using rule 38 (function)


State 109

   37 comp_array_var_declaration: comp_array_var_declaration ',' '#' TK_ID '[' TK_INT • ']'

    ']'  shift, and go to state 112


State 110

   44 parameters: TK_ID '[' ']' ':' general_var_types ',' parameters •

    $default  reduce using rule 44 (parameters)


State 111

   39 function: KW_DEF TK_ID '(' parameters ')' FN_RETURN general_var_types ':' function_body KW_ENDDEF • ';'

    ';'  shift, and go to state 113


State 112

   37 comp_array_var_declaration: comp_array_var_declaration ',' '#' TK_ID '[' TK_INT ']' •

    $default  reduce using rule 37 (comp_array_var_declaration)


State 113

   39 function: KW_DEF TK_ID '(' parameters ')' FN_RETURN general_var_types ':' function_body KW_ENDDEF ';' •

    $default  reduce using rule 39 (function)
